seaqt/QtCore/gen_qxmlstream.nim


proc fcQXmlStreamStringRef_operatorAssign(self: pointer, other: pointer): void {.importc: "QXmlStreamStringRef_operatorAssign".}
proc fcQXmlStreamStringRef_swap(self: pointer, other: pointer): void {.importc: "QXmlStreamStringRef_swap".}
proc fcQXmlStreamStringRef_clear(self: pointer, ): void {.importc: "QXmlStreamStringRef_clear".}
proc fcQXmlStreamStringRef_string(self: pointer, ): struct_miqt_string {.importc: "QXmlStreamStringRef_string".}
proc fcQXmlStreamStringRef_position(self: pointer, ): cint {.importc: "QXmlStreamStringRef_position".}
proc fcQXmlStreamStringRef_size(self: pointer, ): cint {.importc: "QXmlStreamStringRef_size".}
proc fcQXmlStreamStringRef_new(): ptr cQXmlStreamStringRef {.importc: "QXmlStreamStringRef_new".}
proc fcQXmlStreamStringRef_new2(aString: struct_miqt_string): ptr cQXmlStreamStringRef {.importc: "QXmlStreamStringRef_new2".}
proc fcQXmlStreamStringRef_new3(other: pointer): ptr cQXmlStreamStringRef {.importc: "QXmlStreamStringRef_new3".}
proc fcQXmlStreamAttribute_operatorAssign(self: pointer, param1: pointer): void {.importc: "QXmlStreamAttribute_operatorAssign".}
proc fcQXmlStreamAttribute_isDefault(self: pointer, ): bool {.importc: "QXmlStreamAttribute_isDefault".}
proc fcQXmlStreamAttribute_operatorEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamAttribute_operatorEqual".}
proc fcQXmlStreamAttribute_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamAttribute_operatorNotEqual".}
proc fcQXmlStreamAttribute_new(): ptr cQXmlStreamAttribute {.importc: "QXmlStreamAttribute_new".}
proc fcQXmlStreamAttribute_new2(qualifiedName: struct_miqt_string, value: struct_miqt_string): ptr cQXmlStreamAttribute {.importc: "QXmlStreamAttribute_new2".}
proc fcQXmlStreamAttribute_new3(namespaceUri: struct_miqt_string, name: struct_miqt_string, value: struct_miqt_string): ptr cQXmlStreamAttribute {.importc: "QXmlStreamAttribute_new3".}
proc fcQXmlStreamAttribute_new4(param1: pointer): ptr cQXmlStreamAttribute {.importc: "QXmlStreamAttribute_new4".}
proc fcQXmlStreamNamespaceDeclaration_operatorAssign(self: pointer, param1: pointer): void {.importc: "QXmlStreamNamespaceDeclaration_operatorAssign".}
proc fcQXmlStreamNamespaceDeclaration_operatorEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamNamespaceDeclaration_operatorEqual".}
proc fcQXmlStreamNamespaceDeclaration_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamNamespaceDeclaration_operatorNotEqual".}
proc fcQXmlStreamNamespaceDeclaration_new(): ptr cQXmlStreamNamespaceDeclaration {.importc: "QXmlStreamNamespaceDeclaration_new".}
proc fcQXmlStreamNamespaceDeclaration_new2(prefix: struct_miqt_string, namespaceUri: struct_miqt_string): ptr cQXmlStreamNamespaceDeclaration {.importc: "QXmlStreamNamespaceDeclaration_new2".}
proc fcQXmlStreamNamespaceDeclaration_new3(param1: pointer): ptr cQXmlStreamNamespaceDeclaration {.importc: "QXmlStreamNamespaceDeclaration_new3".}
proc fcQXmlStreamNotationDeclaration_operatorAssign(self: pointer, param1: pointer): void {.importc: "QXmlStreamNotationDeclaration_operatorAssign".}
proc fcQXmlStreamNotationDeclaration_operatorEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamNotationDeclaration_operatorEqual".}
proc fcQXmlStreamNotationDeclaration_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamNotationDeclaration_operatorNotEqual".}
proc fcQXmlStreamNotationDeclaration_new(): ptr cQXmlStreamNotationDeclaration {.importc: "QXmlStreamNotationDeclaration_new".}
proc fcQXmlStreamNotationDeclaration_new2(param1: pointer): ptr cQXmlStreamNotationDeclaration {.importc: "QXmlStreamNotationDeclaration_new2".}
proc fcQXmlStreamEntityDeclaration_operatorAssign(self: pointer, param1: pointer): void {.importc: "QXmlStreamEntityDeclaration_operatorAssign".}
proc fcQXmlStreamEntityDeclaration_operatorEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamEntityDeclaration_operatorEqual".}
proc fcQXmlStreamEntityDeclaration_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QXmlStreamEntityDeclaration_operatorNotEqual".}
proc fcQXmlStreamEntityDeclaration_new(): ptr cQXmlStreamEntityDeclaration {.importc: "QXmlStreamEntityDeclaration_new".}
proc fcQXmlStreamEntityDeclaration_new2(param1: pointer): ptr cQXmlStreamEntityDeclaration {.importc: "QXmlStreamEntityDeclaration_new2".}
proc fcQXmlStreamEntityResolver_resolveEntity(self: pointer, publicId: struct_miqt_string, systemId: struct_miqt_string): struct_miqt_string {.importc: "QXmlStreamEntityResolver_resolveEntity".}
proc fcQXmlStreamEntityResolver_resolveUndeclaredEntity(self: pointer, name: struct_miqt_string): struct_miqt_string {.importc: "QXmlStreamEntityResolver_resolveUndeclaredEntity".}
proc fcQXmlStreamReader_setDevice(self: pointer, device: pointer): void {.importc: "QXmlStreamReader_setDevice".}
proc fcQXmlStreamReader_device(self: pointer, ): pointer {.importc: "QXmlStreamReader_device".}
proc fcQXmlStreamReader_addData(self: pointer, data: struct_miqt_string): void {.importc: "QXmlStreamReader_addData".}
proc fcQXmlStreamReader_addDataWithData(self: pointer, data: struct_miqt_string): void {.importc: "QXmlStreamReader_addDataWithData".}
proc fcQXmlStreamReader_addData2(self: pointer, data: cstring): void {.importc: "QXmlStreamReader_addData2".}
proc fcQXmlStreamReader_clear(self: pointer, ): void {.importc: "QXmlStreamReader_clear".}
proc fcQXmlStreamReader_atEnd(self: pointer, ): bool {.importc: "QXmlStreamReader_atEnd".}
proc fcQXmlStreamReader_readNext(self: pointer, ): cint {.importc: "QXmlStreamReader_readNext".}
proc fcQXmlStreamReader_readNextStartElement(self: pointer, ): bool {.importc: "QXmlStreamReader_readNextStartElement".}
proc fcQXmlStreamReader_skipCurrentElement(self: pointer, ): void {.importc: "QXmlStreamReader_skipCurrentElement".}
proc fcQXmlStreamReader_tokenType(self: pointer, ): cint {.importc: "QXmlStreamReader_tokenType".}
proc fcQXmlStreamReader_tokenString(self: pointer, ): struct_miqt_string {.importc: "QXmlStreamReader_tokenString".}
proc fcQXmlStreamReader_setNamespaceProcessing(self: pointer, namespaceProcessing: bool): void {.importc: "QXmlStreamReader_setNamespaceProcessing".}
proc fcQXmlStreamReader_namespaceProcessing(self: pointer, ): bool {.importc: "QXmlStreamReader_namespaceProcessing".}
proc fcQXmlStreamReader_isStartDocument(self: pointer, ): bool {.importc: "QXmlStreamReader_isStartDocument".}
proc fcQXmlStreamReader_isEndDocument(self: pointer, ): bool {.importc: "QXmlStreamReader_isEndDocument".}
proc fcQXmlStreamReader_isStartElement(self: pointer, ): bool {.importc: "QXmlStreamReader_isStartElement".}
proc fcQXmlStreamReader_isEndElement(self: pointer, ): bool {.importc: "QXmlStreamReader_isEndElement".}
proc fcQXmlStreamReader_isCharacters(self: pointer, ): bool {.importc: "QXmlStreamReader_isCharacters".}
proc fcQXmlStreamReader_isWhitespace(self: pointer, ): bool {.importc: "QXmlStreamReader_isWhitespace".}
proc fcQXmlStreamReader_isCDATA(self: pointer, ): bool {.importc: "QXmlStreamReader_isCDATA".}
proc fcQXmlStreamReader_isComment(self: pointer, ): bool {.importc: "QXmlStreamReader_isComment".}
proc fcQXmlStreamReader_isDTD(self: pointer, ): bool {.importc: "QXmlStreamReader_isDTD".}
proc fcQXmlStreamReader_isEntityReference(self: pointer, ): bool {.importc: "QXmlStreamReader_isEntityReference".}
proc fcQXmlStreamReader_isProcessingInstruction(self: pointer, ): bool {.importc: "QXmlStreamReader_isProcessingInstruction".}
proc fcQXmlStreamReader_isStandaloneDocument(self: pointer, ): bool {.importc: "QXmlStreamReader_isStandaloneDocument".}
proc fcQXmlStreamReader_lineNumber(self: pointer, ): clonglong {.importc: "QXmlStreamReader_lineNumber".}
proc fcQXmlStreamReader_columnNumber(self: pointer, ): clonglong {.importc: "QXmlStreamReader_columnNumber".}
proc fcQXmlStreamReader_characterOffset(self: pointer, ): clonglong {.importc: "QXmlStreamReader_characterOffset".}
proc fcQXmlStreamReader_readElementText(self: pointer, ): struct_miqt_string {.importc: "QXmlStreamReader_readElementText".}
proc fcQXmlStreamReader_namespaceDeclarations(self: pointer, ): struct_miqt_array {.importc: "QXmlStreamReader_namespaceDeclarations".}
proc fcQXmlStreamReader_addExtraNamespaceDeclaration(self: pointer, extraNamespaceDeclaraction: pointer): void {.importc: "QXmlStreamReader_addExtraNamespaceDeclaration".}
proc fcQXmlStreamReader_addExtraNamespaceDeclarations(self: pointer, extraNamespaceDeclaractions: struct_miqt_array): void {.importc: "QXmlStreamReader_addExtraNamespaceDeclarations".}
proc fcQXmlStreamReader_notationDeclarations(self: pointer, ): struct_miqt_array {.importc: "QXmlStreamReader_notationDeclarations".}
proc fcQXmlStreamReader_entityDeclarations(self: pointer, ): struct_miqt_array {.importc: "QXmlStreamReader_entityDeclarations".}
proc fcQXmlStreamReader_entityExpansionLimit(self: pointer, ): cint {.importc: "QXmlStreamReader_entityExpansionLimit".}
proc fcQXmlStreamReader_setEntityExpansionLimit(self: pointer, limit: cint): void {.importc: "QXmlStreamReader_setEntityExpansionLimit".}
proc fcQXmlStreamReader_raiseError(self: pointer, ): void {.importc: "QXmlStreamReader_raiseError".}
proc fcQXmlStreamReader_errorString(self: pointer, ): struct_miqt_string {.importc: "QXmlStreamReader_errorString".}
proc fcQXmlStreamReader_error(self: pointer, ): cint {.importc: "QXmlStreamReader_error".}
proc fcQXmlStreamReader_hasError(self: pointer, ): bool {.importc: "QXmlStreamReader_hasError".}
proc fcQXmlStreamReader_setEntityResolver(self: pointer, resolver: pointer): void {.importc: "QXmlStreamReader_setEntityResolver".}
proc fcQXmlStreamReader_entityResolver(self: pointer, ): pointer {.importc: "QXmlStreamReader_entityResolver".}
proc fcQXmlStreamReader_readElementText1(self: pointer, behaviour: cint): struct_miqt_string {.importc: "QXmlStreamReader_readElementText1".}
proc fcQXmlStreamReader_raiseError1(self: pointer, message: struct_miqt_string): void {.importc: "QXmlStreamReader_raiseError1".}
proc fcQXmlStreamReader_new(): ptr cQXmlStreamReader {.importc: "QXmlStreamReader_new".}
proc fcQXmlStreamReader_new2(device: pointer): ptr cQXmlStreamReader {.importc: "QXmlStreamReader_new2".}
proc fcQXmlStreamReader_new3(data: struct_miqt_string): ptr cQXmlStreamReader {.importc: "QXmlStreamReader_new3".}
proc fcQXmlStreamReader_new4(data: struct_miqt_string): ptr cQXmlStreamReader {.importc: "QXmlStreamReader_new4".}
proc fcQXmlStreamReader_new5(data: cstring): ptr cQXmlStreamReader {.importc: "QXmlStreamReader_new5".}
proc fcQXmlStreamWriter_setDevice(self: pointer, device: pointer): void {.importc: "QXmlStreamWriter_setDevice".}
proc fcQXmlStreamWriter_device(self: pointer, ): pointer {.importc: "QXmlStreamWriter_device".}
proc fcQXmlStreamWriter_setCodec(self: pointer, codec: pointer): void {.importc: "QXmlStreamWriter_setCodec".}
proc fcQXmlStreamWriter_setCodecWithCodecName(self: pointer, codecName: cstring): void {.importc: "QXmlStreamWriter_setCodecWithCodecName".}
proc fcQXmlStreamWriter_codec(self: pointer, ): pointer {.importc: "QXmlStreamWriter_codec".}
proc fcQXmlStreamWriter_setAutoFormatting(self: pointer, autoFormatting: bool): void {.importc: "QXmlStreamWriter_setAutoFormatting".}
proc fcQXmlStreamWriter_autoFormatting(self: pointer, ): bool {.importc: "QXmlStreamWriter_autoFormatting".}
proc fcQXmlStreamWriter_setAutoFormattingIndent(self: pointer, spacesOrTabs: cint): void {.importc: "QXmlStreamWriter_setAutoFormattingIndent".}
proc fcQXmlStreamWriter_autoFormattingIndent(self: pointer, ): cint {.importc: "QXmlStreamWriter_autoFormattingIndent".}
proc fcQXmlStreamWriter_writeAttribute(self: pointer, qualifiedName: struct_miqt_string, value: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeAttribute".}
proc fcQXmlStreamWriter_writeAttribute2(self: pointer, namespaceUri: struct_miqt_string, name: struct_miqt_string, value: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeAttribute2".}
